# ue-wallet

./: .env.sample  .gitignore  Cargo.toml  README.md  Wallet.uplugin  release.sh
Content/Example/: Example.umap  GM_WalletDisplay.uasset  PC_Mouse.uasset
Content/Widgets/: WBP_Balance.uasset
Content/Widgets/Avatar/: WBP_AvatarSelection.uasset
Content/Widgets/Misc/: WBP_Button.uasset
Content/Widgets/NFT/: WBP_NFTs.uasset
Content/Widgets/Profile/: WBP_Profile.uasset
Content/Widgets/Setup/Recover/: WBP_EnumeratedPassphrase.uasset  WBP_ImportPublicKey.uasset  WBP_RecoveryPassphrases.uasset
Game/: Game.sln  Game.uproject
Game/Config/: DefaultEngine.ini  DefaultGame.ini
Game/Content/FirstPerson/Maps/: FirstPersonMap.umap
Game/Plugins/Wallet/Content/: WBP_Wallet.uasset  WBP_WalletCreation.uasset  WBP_WalletRecovery.uasset
Game/Plugins/Wallet/Content/Example/: Example.umap  GM_MainMenu.uasset
Game/Plugins/Wallet/Content/Widgets/: WBP_Wallet.uasset  WBP_WalletAddress.uasset
Game/Plugins/Wallet/Content/Widgets/Misc/: WBP_Background.uasset  WBP_Selectable.uasset
Game/Plugins/Wallet/Content/Widgets/NFT/: WBP_NFT.uasset
Game/Plugins/Wallet/Content/Widgets/Setup/: Default__WBP_WalletCreation_C.uasset  WBP_WalletCreation.uasset  WBP_WalletCreation_C.uasset  WBP_WalletSetup.uasset
Game/Plugins/Wallet/Source/Wallet/: Wallet.Build.cs
Source/Wallet/Private/: Wallet.cpp
Source/Wallet/Public/: WalletModule.h
src/: constants.rs  lib.rs  parser.rs
src/ffi/: mod.rs
src/ffi/wallet/: mod.rs
src/solana/: mod.rs
(+9 files in other folders)
