[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
solana-sdk = "1.11.1"
solana-client = "1.11.1"
dotenv = "0.15.0"
solana-account-decoder = "1.11.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
mpl-token-metadata = "1.3.0"
thiserror="1.0.31"
retry = "1.3.0"
borsh = "0.9.1"